--- a/GogoRCustomerManager/packages.config
+++ b/GogoRCustomerManager/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BetterTabControl" version="1.0.19295.1523" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
